# ixy.hs

./: README.md  bench-batch.sh  bench-freq.sh  ixy.cabal  setup-testbench.sh  stack.yaml
app/: Forwarder.hs
measurements/: avg-batch-16.sh  avg-batch.sh  avg-freq.sh  avg-gc.sh  plot-batch-16.R  plot-batch.R  plot-freq.R  plot-gc.R  reset.sh  sanitize.sh
measurements/asm/: raw-batch-16.csv  raw-batch.csv  raw-freq.csv  raw-gc.csv
measurements/asm-less-opt/: raw-batch-16.csv  raw-batch.csv  raw-freq.csv  raw-gc.csv
measurements/llvm/: raw-batch-16.csv  raw-batch.csv  raw-freq.csv  raw-gc.csv
src/: Lib.hs
src/Lib/: Core.hs  Driver.hs  Ixgbe.hs  Log.hs  Memory.hs  Pci.hs
src/Lib/Driver/: Ixgbe.hs
src/Lib/Driver/Ixgbe/: Descriptor.hs  Device.hs  Queue.hs  Register.hs  Types.hs
src/Lib/Ixgbe/: Queue.hs  Register.hs  Types.hs
src/Lib/Ixgbe/Types/: Extended.hs
src/Lib/Memory/: Types.hs
src/Lib/Pci/: Types.hs
