name:                ixy
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/ixy#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     Lib, Lib.Pci
  other-modules:       Lib.Prelude, Lib.Log, Lib.Memory
  build-depends:       base >= 4.7 && < 5
                     , bytestring >= 0.10 && <= 0.10.8.2
                     , exceptions >= 0.9.0 && <= 0.10.0
                     , fast-logger >= 2.4.6 && <= 2.4.11
                     , mtl >= 2.2.2 && <= 2.2.2
                     , pathtype >= 0.8 && <= 0.8.1
                     , protolude >= 0.1.6 && <= 0.2.2
                     , regex-pcre >= 0.94 && <= 0.94.4
                     , text >= 1.2 && <= 1.2.3.0
                     , vector >= 0.12.0.0 && <= 0.12.0.1
                     , unix >= 2.7.0.0 && <= 2.7.2.2
                     , unix-memory >= 0.1.1 && <= 0.1.2
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings, NoImplicitPrelude

executable forwarder 
  hs-source-dirs:      app
  main-is:             Forwarder.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , exceptions >= 0.9.0 && <= 0.10.0
                     , fast-logger >= 2.4.6 && <= 2.4.11
                     , ixy
                     , protolude >= 0.1.6 && <= 0.2.2
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings, NoImplicitPrelude

test-suite ixy-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , ixy
                     , protolude >= 0.1.6 && <= 0.2.2
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings, NoImplicitPrelude

source-repository head
  type:     git
  location: https://github.com/githubuser/ixy
